updated home page cards

--- a/index.html
+++ b/index.html
@@ -573,50 +573,47 @@
 
   <!-- START: CARDS ROW 1 -->
 
-  <!--   <div id="card9" class="card draggable center">
-    <em>Mala Onda</em><br/><br/><br/><br/>
+  <div id="malaonda" class="card draggable center">
+    <em><span class="title shake-slow shake-constant">Mala Onda</span></em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/186196449?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Survey</small>
-  </div> -->
+  </div>
 
-  <!-- <div id="card9" class="card draggable center">
-    <em>Dolphin Accelerator</em><br/><br/>
+  <div id="dolphinaccelerator" class="card draggable center">
+    <em><span class="title shake-slow shake-constant">Dolphin Accelerator</span></em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/186337332?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video</small>
-  </div> -->
+  </div>
 
-  <div id="card13" class="card draggable center">
+  <div id="quitting" class="card draggable center">
     <em><span class="title shake-slow shake-constant">Quitting</span></em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/200595854?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Performance</small>
+    <small></small>
   </div>
 
-   <div id="card12" class="card draggable center">
+   <div id="wwwork" class="card draggable center">
     <em><span class="title shake-slow shake-constant">WWWORK</span></em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/202841346?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video Essay</small>
+    <small></small>
   </div>
 
-  <div id="card11" class="card draggable center futureofworkbook">
+  <div id="futureofwork" class="card draggable center futureofworkbook">
     <em><span class="title shake-slow shake-constant">The Future of Work</span></em><br/><br/>
     <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank"><img src="img/futureofworkbook.jpg" class="img-responsive" alt="The Future of Work book cover"></a><br/>
     <small>Available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a>, <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a>, or in <a href="http://bit.ly/futureofwork-print" target="_blank">print</a>.</small>
   </div> 
 
-<!--   <div id="card13" class="card draggable center">
-    <em>After Work</em><br/><br/><br/><br/>
+  <div id="afterwork" class="card draggable center">
+    <em><span class="title shake-slow shake-constant">After Work</span></em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/222723623?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Design <a href="futuregenerator.html"> the future</a>.</small>
-  </div> -->
+  </div>
 
-  <div id="card14" class="card draggable center">
+  <div id="eternal" class="card draggable center">
 <!--     <img class="new" src="img/new.gif"/> -->
     <em><span class="title shake-slow shake-constant">Eternal Boy Playground</span></em><br/><br/>
     <a href="https://tttelematiccc.com/" target="_blank"><img class="img-responsive" src="img/eternal.jpg"></a><br/>
-    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/>323 10th St. (at Folsom)<br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/><span class="closing shake-little shake-constant">Closing Reception: Feb 2nd, 4-6pm</span></small>
+    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/>323 10th St. (at Folsom)<br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/><span class="closing smaller shake-little shake-constant shake-constant--hover"><strong>Closing Reception: Feb 2nd, 4-6pm</strong></span></small>
   </div>
 
-  <div id="card10" class="card draggable center">
+  <div id="contact" class="card draggable center">
     <span class="title shake-slow shake-constant">Contact</span>
     <br/><br/><br/><br/>
     <p class="email">
@@ -685,9 +682,9 @@
     <br/><br/>
     <strong>7.2018</strong> <a href="http://squeaky.org/squeaky-wheel-announces-summer-2018-workspace-residents/" target="_blank">Squeaky Wheel announces Summer 2018 Workspace Residents</a>, Squeaky Wheel Film &amp; Meida Art Center, Buffalo, NY. Artist Resident Emily Martinez will be working on <em>Eternal Boy Playground</em>.
     <br/><br/>
-    <strong>7.2018</strong> <em>After Work</em>, <a href="https://lafazdelatierravideo.wordpress.com/" target="_blank">La Faz de la Tierra</a>, Espacio Pla, Buenos Aires, Argentina. <em>After Work</em> will be exhibited together with 35 other videos in a show that reboots Eduardo Pla’s video installation Videomundo Virtual. (note: Videomundo Virtual was an artistic production for the 50th anniversary of the UN in 1995, and featured a sphere-shaped structure with six TV sets.)
+    <strong>7.2018</strong> <em>After Work</em>, <a href="https://lafazdelatierravideo.wordpress.com/" target="_blank">La Faz de la Tierra</a>, Espacio Pla, Buenos Aires, Argentina. <em>After Work</em> will be exhibited together with 35 other videos in a show that reboots Eduardo Pla’s video installation Videomundo Virtual.
     <br/><br/>
-    <strong>6.2018</strong> <a href="https://crit.hangar.org/toolbox/" target="_blank">Artistic Approaches to the Interface </a>, Hangar Centre for Art Research and Production. Our website is featured as part of the toolkit in Section 4: Artistic Approaches to the Interface
+    <strong>6.2018</strong> <a href="https://crit.hangar.org/toolbox/" target="_blank">Artistic Approaches to the Interface </a>, Hangar Centre for Art Research and Production, Barcelona, Spain. Our website is featured as part of the Critical Interface Toolkit, an online resource that exposes experimental methodologies, practices, and tools aimed at enhancing critical thought towards the actual configuration of the Interface.
     <br/><br/>
     <strong>2.2018</strong> <em>How to Make Yourself into a Commissioning Body in 5 Easy Steps by Anxious to Make </em>, <a href="http://networkcultures.org/entreprecariat/how-to-make-yourself-into-a-commissioning-body/" target="_blank">Entreprecariat </a>, Institute of Network Cultures
     <br/><br/>
@@ -699,7 +696,7 @@
     <br/><br/>
     <strong>9.2017</strong> <em>How to Make Yourself into a Commissioning Body in Five Easy Steps</em>, <a href="http://networkcultures.org/entreprecariat/pervasive-labour-union-zine-11/" target="_blank">Pervasive Labour Union zine #11 – Special Issue: Entreprecariat!</a>, Institute of Network Cultures, Amsterdam, NL  
     <br/><br/>
-    <strong>7.2017</strong> <em><a href="http://networkcultures.org/entreprecariat/mugtivism/" target="_blank">Notes on Mugtivism and Precarious Merchandising</a></em>, Entreprecariat, Institute of Network Cultures. article by by Silvio Lorusso featuring our mugs
+    <strong>7.2017</strong> <em><a href="http://networkcultures.org/entreprecariat/mugtivism/" target="_blank">Notes on Mugtivism and Precarious Merchandising</a></em>, article by Silvio Lorusso featuring our mugs, Entreprecariat, Institute of Network Cultures.
     <br/><br/>
     <strong>6.2017</strong> <em>Precarious Life 2.0</em>, <a href="http://theluminaryarts.com/exhibitions/anxious-to-make" target="_blank">The Luminary</a>, St. Louis, MO<br/>Solo Exhibition, June 24 - July 15th, 2017
     <br/><br/>
@@ -709,7 +706,7 @@
     <br/><br/>
     <strong>1.2017</strong> <em>Dolphin Accelerator</em>, <a href="http://www.petzel.com/exhibitions/2017-01-07_we-need-to-talk/" target="_blank">We Need To Talk</a>, Petzel Gallery, New York, NY
     <br/><br/>
-    <strong>12.2016</strong> <em>The Future of Work (book)</em>. Now available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a> or <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a> from V2_ Lab for the Unstable Media, or as print-on-demand <a href="http://bit.ly/futureofwork-print" target="_blank">hardcopy</a> from Blurb
+    <strong>12.2016</strong> <em>The Future of Work (book)</em>. Now available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a> or <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a> from V2_ Lab for the Unstable Media, or as print-on-demand <a href="http://bit.ly/futureofwork-print" target="_blank">hardcopy</a> from us.
     <br/><br/>
     <strong>11.2016</strong> We have work here: <a href="http://temporaryartreview.com/announcing-to-make-a-public-book-launch-events/" target="_blank">To Make a Public: Temporary Art Review 2011-2016</a>. Buy a copy and support Temporary Art Review.
     <br/><br/>
@@ -784,9 +781,9 @@
     <br/><br/>
     <strong>7.2018</strong> <a href="http://squeaky.org/squeaky-wheel-announces-summer-2018-workspace-residents/" target="_blank">Squeaky Wheel announces Summer 2018 Workspace Residents</a>, Squeaky Wheel Film &amp; Meida Art Center, Buffalo, NY. Artist Resident Emily Martinez will be working on <em>Eternal Boy Playground</em>.
     <br/><br/>
-    <strong>7.2018</strong> <em>After Work</em>, <a href="https://lafazdelatierravideo.wordpress.com/" target="_blank">La Faz de la Tierra</a>, Espacio Pla, Buenos Aires, Argentina. <em>After Work</em> will be exhibited together with 35 other videos in a show that reboots Eduardo Pla’s video installation Videomundo Virtual. (note: Videomundo Virtual was an artistic production for the 50th anniversary of the UN in 1995, and featured a sphere-shaped structure with six TV sets.)
+    <strong>7.2018</strong> <em>After Work</em>, <a href="https://lafazdelatierravideo.wordpress.com/" target="_blank">La Faz de la Tierra</a>, Espacio Pla, Buenos Aires, Argentina. <em>After Work</em> will be exhibited together with 35 other videos in a show that reboots Eduardo Pla’s video installation Videomundo Virtual.
     <br/><br/>
-    <strong>6.2018</strong> <a href="https://crit.hangar.org/toolbox/" target="_blank">Artistic Approaches to the Interface </a>, Hangar Centre for Art Research and Production. Our website is featured as part of the toolkit in Section 4: Artistic Approaches to the Interface
+    <strong>6.2018</strong> <a href="https://crit.hangar.org/toolbox/" target="_blank">Artistic Approaches to the Interface </a>, Hangar Centre for Art Research and Production, Barcelona, Spain. Our website is featured as part of the Critical Interface Toolkit, an online resource that exposes experimental methodologies, practices, and tools aimed at enhancing critical thought towards the actual configuration of the Interface.
     <br/><br/>
     <strong>2.2018</strong> <em>How to Make Yourself into a Commissioning Body in 5 Easy Steps by Anxious to Make </em>, <a href="http://networkcultures.org/entreprecariat/how-to-make-yourself-into-a-commissioning-body/" target="_blank">Entreprecariat </a>, Institute of Network Cultures
     <br/><br/>
@@ -798,7 +795,7 @@
     <br/><br/>
     <strong>9.2017</strong> <em>How to Make Yourself into a Commissioning Body in Five Easy Steps</em>, <a href="http://networkcultures.org/entreprecariat/pervasive-labour-union-zine-11/" target="_blank">Pervasive Labour Union zine #11 – Special Issue: Entreprecariat!</a>, Institute of Network Cultures, Amsterdam, NL  
     <br/><br/>
-     <strong>7.2017</strong> <em><a href="http://networkcultures.org/entreprecariat/mugtivism/" target="_blank">Notes on Mugtivism and Precarious Merchandising</a></em>, Entreprecariat, Institute of Network Cultures. article by by Silvio Lorusso featuring our mugs
+    <strong>7.2017</strong> <em><a href="http://networkcultures.org/entreprecariat/mugtivism/" target="_blank">Notes on Mugtivism and Precarious Merchandising</a></em>, article by Silvio Lorusso featuring our mugs, Entreprecariat, Institute of Network Cultures.
     <br/><br/>
     <strong>6.2017</strong> <em>Precarious Life 2.0</em>, <a href="http://theluminaryarts.com/exhibitions/anxious-to-make" target="_blank">The Luminary</a>, St. Louis, MO<br/>Solo Exhibition, June 24 - July 15th, 2017
     <br/><br/>
@@ -808,7 +805,7 @@
     <br/><br/>
     <strong>1.2017</strong> <em>Dolphin Accelerator</em>, <a href="http://www.petzel.com/exhibitions/2017-01-07_we-need-to-talk/" target="_blank">We Need To Talk</a>, Petzel Gallery, New York, NY
     <br/><br/>
-    <strong>12.2016</strong> <em>The Future of Work (book)</em>. Now available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a> or <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a> from V2_ Lab for the Unstable Media, or as print-on-demand <a href="http://bit.ly/futureofwork-print" target="_blank">hardcopy</a> from Blurb
+    <strong>12.2016</strong> <em>The Future of Work (book)</em>. Now available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a> or <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a> from V2_ Lab for the Unstable Media, or as print-on-demand <a href="http://bit.ly/futureofwork-print" target="_blank">hardcopy</a> from us.
     <br/><br/>
     <strong>11.2016</strong> We have work here: <a href="http://temporaryartreview.com/announcing-to-make-a-public-book-launch-events/" target="_blank">To Make a Public: Temporary Art Review 2011-2016</a>. Buy a copy and support Temporary Art Review.
     <br/><br/>
